; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_output_sep.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_output_sep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { i32*, i32 (%struct.grep_opt*, i8*, i32)*, i64 }

@.str = private unnamed_addr constant [2 x i8] zeroinitializer, align 1
@GREP_COLOR_SEP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grep_opt*, i8)* @output_sep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @output_sep(%struct.grep_opt* %0, i8 signext %1) #0 {
  %3 = alloca %struct.grep_opt*, align 8
  %4 = alloca i8, align 1
  store %struct.grep_opt* %0, %struct.grep_opt** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %6 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %11 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %10, i32 0, i32 1
  %12 = load i32 (%struct.grep_opt*, i8*, i32)*, i32 (%struct.grep_opt*, i8*, i32)** %11, align 8
  %13 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %14 = call i32 %12(%struct.grep_opt* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  br label %24

15:                                               ; preds = %2
  %16 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %17 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %18 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* @GREP_COLOR_SEP, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @output_color(%struct.grep_opt* %16, i8* %4, i32 1, i32 %22)
  br label %24

24:                                               ; preds = %15, %9
  ret void
}

declare dso_local i32 @output_color(%struct.grep_opt*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
